[package]
name = "parsediscordarchive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
simd-json = "0.14"
serde_json = "1"
serde_with = "3"
chrono = { version = "0.4", features = ["serde"] }
